--- a/_posts/2015-08-21-makefake.md
+++ b/_posts/2015-08-21-makefake.md
@@ -31,7 +31,7 @@ _We stop smoking_ because not everybody wants the smell of smoke. And not everyb
 
 _We don't engage in pre-marital sex_ because if we do it, human relationships unnecessarily get complicated. Hard sell? Be our guest.
 
-We stop being arrogant and disrespectful because we really don't know everything in life. And when we become so full of it, we only hasten our own undoing and be left with no one.
+_We stop being arrogant and disrespectful_ because we really don't know everything in life. And when we become so full of it, we only hasten our own undoing and be left with no one.
 
 _We stop emulating Jacka**_ in all levels because God made you for better things in life. And when you spend most of your time trying to have fun hurting and/or humiliating yourself consequently (or both at the same time), you miss out on doing better things for humanity in the name of Jesus.
 
