Jekyl and lots of CSS3 fiddles.

--- a/_posts/2015-08-21-makefake.md
+++ b/_posts/2015-08-21-makefake.md
@@ -1,13 +1,14 @@
 ---
 layout: post
 title:  "Can't Fake It Till You Make It."
+categories: faith
 ---
 
 _Was for a Facebook post. It got long and I wanted to practice Vim. An extensive commentary (as I would always get in to) to [this article](http://stackoverflow.com/questions/1562350/copy-and-paste-from-external-source)._
 
-We're not justifying sin. Sin must be repented of. 
+We're not justifying sin. Sin must be repented of.
 
-But we don't fake change, either. 
+But we don't fake change, either.
 
 We don't put the cart before the horse.
 
