--- a/_posts/2015-08-22-phelections2016.md
+++ b/_posts/2015-08-22-phelections2016.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title:  "My Personal Quick And Dirty Wise Voting Strategy"
+categories: politics
 ---
 
 Now that I have been officially a registered voter, I now have this so-called power to effect change to the country by shading hollow shapes on a sheet of paper.
@@ -69,7 +70,7 @@ So, how are you going to do that?
 
   * You can check for the volume of validly-purposed local infrastructure. Are the roads smooth, are the streets of the locality well-equipped with pedestrian aides, are the street lights even working, etc.
 
-    > "But that's not just for the local government unit to work on. That's what bureaus and departments are for!" 
+    > "But that's not just for the local government unit to work on. That's what bureaus and departments are for!"
 
     And I think it's the local government's job to make sure the needs of their constituents are being fulfilled. A better offical wouldn't always take a "no/wait" for an answer and abruptly cease aspiring for the best of his constituents.
 
@@ -82,4 +83,3 @@ So, how are you going to do that?
 And that's pretty much it, actually. No fuzz.
 
 Some people would rather go further in to bit by digging deeper in to the tendencies, background, or the inclination of a person, but I think the things that I would've listed are just a few things if not everything that matters in choosing somebody to lead and produce results.
-
